--- a/assets/.sass-lint.yml
+++ b/assets/.sass-lint.yml
@@ -1,14 +1,8 @@
 files:
-  include: 'src/scss/**/*.s+(a|c)ss'
+  include: 'scss/**/*.s+(a|c)ss'
   ignore:
-    - 'src/scss/vendor/**/*.scss'
-    - 'src/scss/base/_normalize.scss'
+    - 'vendor/**/*.scss'
 rules:
-  no-vendor-prefixes: 0
-  no-transition-all: 0
-  force-element-nesting: 0
-  force-attribute-nesting: 0
-  force-pseudo-nesting: 0
   no-mergeable-selectors: 0
   no-qualifying-elements:
     - 0
@@ -16,3 +10,6 @@ rules:
   nesting-depth:
     - 1
     - max-depth: 3
+  class-name-format:
+    - 1
+    - convention: strictbem
