--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^3.0.3",
+    "gulp-concat": "^2.6.1",
     "gulp-eslint": "^3.0.1",
     "gulp-postcss": "^6.3.0",
     "gulp-rename": "^1.2.2",
